feat(be): implement paginate response for task service